Fix color contrast at home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu a span {
   padding: 0 5px 0 7px;
-  color: #45505b;
+  color: #2A4055;
 }
 
 @media (min-width: 992px) {
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu a:hover, .nav-menu .active, .nav-menu li:hover > a {
   color: #fff;
-  background: #66A3DB;
+  background: #C8E0F4;
 }
 
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu li:hover > a span {
